# tridot2d

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: setup_emsdk.sh
src/test/: main.cpp
src/tridot2d/: tridot2d.h
src/tridot2d/audio/: Audio.cpp  Audio.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h
src/tridot2d/common/: FileWatcher.cpp  FileWatcher.h  Log.cpp  Log.h  Singleton.cpp  Singleton.h  TaskManager.cpp  TaskManager.h
src/tridot2d/components/: GridT.h  commonComponents.cpp  commonComponents.h  components.cpp  components.h
src/tridot2d/core/: Application.cpp  Application.h  ApplicationLayer.cpp  ApplicationLayer.h  EntitySystem.cpp  EntitySystem.h
src/tridot2d/particles/: Particle.h  ParticleEffect.cpp  ParticleEffect.h  ParticleSystem.cpp  ParticleSystem.h
src/tridot2d/physics/: Body.cpp  Body.h  BroadPhase.cpp  BroadPhase.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.h  Shape.cpp  Shape.h  Solver.cpp  Solver.h
src/tridot2d/render/: Buffer.cpp  Buffer.h  Color.cpp  Color.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  RenderContext.cpp  RenderContext.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderState.h  SimpleRenderer.cpp  SimpleRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  enum.cpp  enum.h
src/tridot2d/render/shader/: 2d.glsl  2d_es.glsl  line.glsl  mesh.glsl
src/tridot2d/systems/: Application.cpp  Application.h  AssetsManager.cpp  AssetsManager.h  Camera.cpp  Camera.h  DebugUI.cpp  DebugUI.h  EntitySystem.cpp  EntitySystem.h  Input.cpp  Input.h  Random.cpp  Random.h  Time.cpp  Time.h  Window.cpp  Window.h
src/tridot2d/ui/: UiElement.cpp  UiElement.h
src/tridot2d/util/: Clock.cpp  Clock.h  DateTime.cpp  DateTime.h  strutil.cpp  strutil.h
